@@ -1,8 +1,11 @@
 package com.checkping.service.member;
 
+import com.checkping.common.dto.PageInfo;
+import com.checkping.common.dto.PageMetaResponse;
 import com.checkping.common.utils.FileRequest;
 import com.checkping.domain.member.Organization;
 import com.checkping.dto.OrganizationCreate;
+import com.checkping.dto.OrganizationDelete;
 import com.checkping.dto.OrganizationGet;
 import com.checkping.dto.OrganizationUpdate;
 import com.checkping.exception.member.OrganizationAlreadyExistEntityException;
@@ -10,13 +13,15 @@ import com.checkping.exception.member.OrganizationNotFoundEntityException;
 import com.checkping.infra.repository.file.S3FileRepositoryImpl;
 import com.checkping.infra.repository.member.OrganizationRepository;
 import lombok.RequiredArgsConstructor;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageRequest;
+import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 import org.springframework.web.multipart.MultipartFile;
 
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -60,34 +65,26 @@ public class OrganizationServiceImpl implements OrganizationService {
 
     @Transactional(readOnly = true)
     @Override
-    public List<OrganizationGet.Response> getAllByTypeAndStatusOrganizations(String type, String status) {
+    public PageInfo.Response<OrganizationGet.Response> getListOrganization(String type, String status, PageInfo.Request pageRequest) {
 
-        // 전체 조회
-        if (type == null && status == null) {
-            return organizationRepository.findAll().stream()
-                    .map(OrganizationGet.Response::toDto)
-                    .collect(Collectors.toList());
-        }
-        // 전체 조회 (상태별)
-        else if (type == null) {
-            return organizationRepository.findByStatus(Organization.Status.valueOf(status.toUpperCase())).stream()
-                    .map(OrganizationGet.Response::toDto)
-                    .collect(Collectors.toList());
-        }
-        // 타입별 전체 조회
-        else if (status == null) {
-            return organizationRepository.findByType(Organization.Type.valueOf(type.toUpperCase())).stream()
-                    .map(OrganizationGet.Response::toDto)
-                    .collect(Collectors.toList());
-        }
-        // 타입별 전체 조회 (상태별)
-        else {
-            return organizationRepository.findByTypeAndStatus(
-                            Organization.Type.valueOf(type.toUpperCase()),
-                            Organization.Status.valueOf(status.toUpperCase())).stream()
-                    .map(OrganizationGet.Response::toDto)
-                    .collect(Collectors.toList());
-        }
+        Pageable pageable = PageRequest.of(pageRequest.getCurrentPage() - 1, pageRequest.getPageSize());
+
+        Organization.Type validType = checkType(type);
+        Organization.Status validStatus = checkStatus(status);
+
+        Page<Organization> result = organizationRepository.findByTypeAndStatus(
+                validType,
+                validStatus,
+                pageRequest.getKeyword(),
+                pageable);
+
+        List<OrganizationGet.Response> dtoList = result.getContent().stream().map(OrganizationGet.Response::toDto).toList();
+        PageMetaResponse meta = PageMetaResponse.fromPage(result);
+
+        return PageInfo.Response.<OrganizationGet.Response>builder()
+                .dtoList(dtoList)
+                .meta(meta.toMap())
+                .build();
     }
 
     @Transactional(rollbackFor = Exception.class)
@@ -100,8 +97,13 @@ public class OrganizationServiceImpl implements OrganizationService {
         Optional<Organization> result = organizationRepository.findById(id);
         Organization organization = result.orElseThrow(OrganizationNotFoundEntityException::new);
 
-        // 저장 파일명
-        String saveName = organization.getBrCertificateUrl().split("\\|")[0];
+        // 기존 파일이 있다면 삭제
+        if (organization.getBrCertificateUrl() != null && !organization.getBrCertificateUrl().isEmpty()) {
+            // 저장 파일명
+            String saveName = organization.getBrCertificateUrl().split("\\|")[0];
+            // 기존 파일 삭제
+            s3FileRepositoryImpl.deleteFile(saveName);
+        }
 
         // 수정 파일 등록
         if (file != null) {
@@ -119,26 +121,41 @@ public class OrganizationServiceImpl implements OrganizationService {
 
         Organization updateOrganization = organizationRepository.save(organization);
 
-        // 기존 파일 삭제
-        s3FileRepositoryImpl.deleteFile(saveName);
-
         OrganizationUpdate.Response.toDto(updateOrganization);
 
         return OrganizationUpdate.Response.toDto(updateOrganization);
     }
 
+    @Transactional(rollbackFor = Exception.class)
     @Override
-    public OrganizationGet.Response removeOrganization(Long id) {
+    public OrganizationDelete.Response removeOrganization(Long id, OrganizationDelete.Request request) {
 
         Optional<Organization> result = organizationRepository.findById(id);
 
         Organization organization = result.orElseThrow(OrganizationNotFoundEntityException::new);
 
-        organization.changeStatus();
+        organization.changeStatus(request.getReason());
 
         Organization removeOrganization = organizationRepository.save(organization);
 
-        return OrganizationGet.Response.toDto(removeOrganization);
+        return OrganizationDelete.Response.toDto(removeOrganization);
     }
+
+
+    private Organization.Type checkType(String type) {
+        if (type == null || type.trim().isEmpty()) {
+            return null;
+        }
+        return Organization.Type.valueOf(type.toUpperCase());
+    }
+
+    private Organization.Status checkStatus(String status) {
+        if (status == null || status.trim().isEmpty()) {
+            return null;
+        }
+        return Organization.Status.valueOf(status.toUpperCase());
+    }
+
+
 
 }
